# cppl

./: .gitignore  .gitlab-ci.yml  Levitation.md  README.md
.github/workflows/: c-cpp.yml
clang/include/clang/AST/: ASTMutationListener.h  Decl.h  DeclBase.h  DeclCXX.h  DeclTemplate.h
clang/include/clang/Basic/: DiagnosticCommonKinds.td  DiagnosticDriverKinds.td  DiagnosticFrontendKinds.td  DiagnosticGroups.td  DiagnosticLexKinds.td  LangOptions.def  (+4 more)
clang/lib/: CMakeLists.txt
clang/lib/AST/: ASTContext.cpp  ASTImporter.cpp  Decl.cpp  DeclBase.cpp  DeclCXX.cpp  DeclPrinter.cpp
clang/lib/Basic/: IdentifierTable.cpp
clang/lib/Driver/: Driver.cpp  Types.cpp
clang/lib/Frontend/: ASTUnit.cpp  CMakeLists.txt  CompilerInstance.cpp  CompilerInvocation.cpp  FrontendAction.cpp  FrontendActions.cpp  FrontendOptions.cpp  LevitationASTConsumers.cpp  LevitationFrontendActions.cpp  MultiplexConsumer.cpp
clang/lib/FrontendTool/: ExecuteCompilerInvocation.cpp
clang/lib/Levitation/: BugTracking.txt  CMakeLists.txt  CompileAST.cpp  CompilerInstanceExts.cpp  CompilerInstanceLevitation.cpp  Dependencies.cpp  DependenciesSolver.cpp  Driver.cpp  DriverDefaults.cpp  FileExtensions.cpp  FrontendActionExts.cpp  Serialization.cpp
clang/lib/Lex/: PPDirectives.cpp  PPMacroExpansion.cpp
clang/lib/Parse/: CMakeLists.txt  LevitationParser.cpp  ParseAST.cpp  ParseCXXInlineMethods.cpp  ParseDecl.cpp  ParseDeclCXX.cpp  ParseLevitation.cpp  Parser.cpp
clang/lib/Sema/: CMakeLists.txt  MultiplexExternalSemaSource.cpp  Sema.cpp  SemaCXXScopeSpec.cpp  SemaDecl.cpp  SemaDeclCXX.cpp  SemaExprMember.cpp  SemaLevitation.cpp  SemaTemplate.cpp  SemaTemplateInstantiate.cpp  SemaTemplateInstantiateDecl.cpp  TreeTransform.h
clang/lib/Serialization/: ASTCommon.h  ASTReader.cpp  ASTReaderDecl.cpp  ASTWriter.cpp  ASTWriterDecl.cpp  GeneratePCH.cpp  ModuleManager.cpp
clang/test/: lit.cfg.py
clang/test/AST/: ast-dump-package-namespace.cpp  ast-print-package-namespace.cpp  ast-print-record-decl.c
clang/test/Parser/: package-namespaces.cpp
clang/tools/: CMakeLists.txt
clang/tools/levitation-cppl/: CMakeLists.txt  levitation-cppl.cpp
clang/tools/levitation-deps/: CMakeLists.txt  levitation-deps.cpp
clang/unittests/: CMakeLists.txt
clang/unittests/Levitation/: CMakeLists.txt  LevitationUnitTests.cpp
levitation/: CODE_OWNERS.txt  Levitation.md
levitation/cmake-driver-sample/: CMakeLists-sample.txt
levitation/cmake-sample/: CMakeLists-sample.txt  build-cmake.sh  cppl-variables.cmake  log.cmake  main.cmake
levitation/cmake-sample-manual-mode/: file.cmake  main.cmake
(+304 files in other folders)
